--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,16 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: light --default;
+  themes: dark --default;
 }
 
 @import "tailwindcss";
 
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
 }
 
 .custom-container {
-  @apply p-4 w-full;
+  @apply px-4 py-16 w-full flex-1;
 }
 
 .rounded-edges {
